# MLOps_actions_v2

./: .gitignore  DEVELOPERS.md  Makefile  README-Linux.md  README.md  create_executions_export.sh  makefile_check_phases.yml  requirements.txt
.dvc/: config
.github/: 60_deploy-api.http  Claude-auditoria.md  Claude.md  requests.md  requests2.md  test_worflow.sh
.github/github_container_job/: Dockerfile  Dockerfile copy  config_runner.sh
.github/workflows/: 60_deploy-api copy.http  61_mlops_Orchestator_trigger copy.yml  61_mlops_Orchestator_trigger.yml  99_build_job_container.yml  reusable_fase1-Explore.yml  reusable_fase2-PrepareEvents.yml  reusable_fase3-PrepareWindows.yml  reusable_fase4-TargetEngineering.yml  reusable_fase5-Modeling.yml  reusable_fase6-Quantiza&packageForEdge.yml  (+2 more)
.mlops4ofp/: env.sh  pipeline_ref.yaml  setup.yaml
doc/: Config-Github-For-Docker.md  Github-Actions-worflow-token.md
edge/arduino/: README.md
executions/f07_modval/v7_0702/esp32_project/main/: CMakeLists.txt  data_reader.h  models_mgr.h  predictions_mgr.c  predictions_mgr.h  scheduler.c  trace.h
scripts/: traceability_schema.yaml
setup/: check_env.py  check_setup.py  local.yaml  remote2.yaml  setup.py  workflow.yaml
test/: compact_inheritance_view.py  compare_execution_roots.py  compare_lineage_variants.py  compare_parent_outputs_vs_child_params.py  generate_table.py  generate_v00_lineage_params_jpg.py  generate_variants_diagram.py  group_params_by_creation_and_lineage.py  merge_timings.py  run-test-audit.sh  run-test.sh  run-test2.sh  trace_lineage_params.py
(+399 files in other folders)
